GNOME Bugzilla – Bug 707270
pitch: Fails to compile if soundtouch was compiled as integer variant
Last modified: 2013-09-02 08:42:22 UTC
https://buildd.debian.org/status/fetch.php?pkg=gst-plugins-bad1.0&arch=armel&ver=1.0.10-1&stamp=1377860724 gstpitch.cc: In function 'GstBuffer* gst_pitch_prepare_buffer(GstPitch*)': gstpitch.cc:367:68: error: no matching function for call to 'soundtouch::SoundTouch::receiveSamples(gfloat*, guint&)' samples = priv->st->receiveSamples ((gfloat *) info.data, samples); ^ gstpitch.cc:367:68: note: candidates are: In file included from /usr/include/soundtouch/SoundTouch.h:75:0, from gstpitch.cc:35: /usr/include/soundtouch/FIFOSamplePipe.h:190:18: note: virtual uint soundtouch::FIFOProcessor::receiveSamples(soundtouch::SAMPLETYPE*, uint) virtual uint receiveSamples(SAMPLETYPE *outBuffer, ///< Buffer where to copy output samples. ^ /usr/include/soundtouch/FIFOSamplePipe.h:190:18: note: no known conversion for argument 1 from 'gfloat* {aka float*}' to 'soundtouch::SAMPLETYPE* {aka short int*}' /usr/include/soundtouch/FIFOSamplePipe.h:203:18: note: virtual uint soundtouch::FIFOProcessor::receiveSamples(uint) virtual uint receiveSamples(uint maxSamples ///< Remove this many samples from the beginning of pipe. ^ /usr/include/soundtouch/FIFOSamplePipe.h:203:18: note: candidate expects 1 argument, 2 provided gstpitch.cc: In function 'GstFlowReturn gst_pitch_chain(GstPad*, GstObject*, GstBuffer*)': gstpitch.cc:875:77: error: no matching function for call to 'soundtouch::SoundTouch::putSamples(gfloat*, gsize)' priv->st->putSamples ((gfloat *) info.data, info.size / pitch->sample_size); ^ gstpitch.cc:875:77: note: candidate is: In file included from gstpitch.cc:35:0: /usr/include/soundtouch/SoundTouch.h:236:18: note: virtual void soundtouch::SoundTouch::putSamples(const SAMPLETYPE*, uint) virtual void putSamples( ^ /usr/include/soundtouch/SoundTouch.h:236:18: note: no known conversion for argument 1 from 'gfloat* {aka float*}' to 'const SAMPLETYPE* {aka const short int*}' make[4]: *** [libgstsoundtouch_la-gstpitch.lo] Error 1
commit 576b4826c80a3b4ca4fa946a42732e7c599d312f Author: Sebastian Dröge <slomo@circular-chaos.org> Date: Mon Sep 2 10:29:08 2013 +0200 soundtouch: Allow compilation against float and integer version of the library https://bugzilla.gnome.org/show_bug.cgi?id=707270