soundtouch: Allow compilation against float and integer version of the library

https://bugzilla.gnome.org/show_bug.cgi?id=707270